-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 Beta1
-
None
-
2021wk38POAndroid&Mobile
https://doc-snapshots.qt.io/qt6-6.2/qtmultimedia-qmlmodule.html does not list the following types:
- CaptureSession
- MediaRecorder
- MetaData
- MediaDevices
- AudioInput
- AudioOutput
- MediaFormat
- is required for
-
QTBUG-94646
Support Overhaul of Documentation
-
- Closed
-
- relates to
-
QTBUG-94895 Clean up Qt Multimedia documentation for Qt 6.2
-
- Closed
-
-
QTBUG-96462 Documentation Problem with QMediaPlayer/MediaPlayer AudioOutput
-
- Reported
-
- mentioned in
-
Page Loading...