Docs: Add CaptureSession QML Type Documentation

Add documentation for CaptureSession QML type.

Task-number: QTBUG-95066
Pick-to: 6.2
Change-Id: I82ca757b24fe780050f4368e964c819851702c48
Reviewed-by: Lars Knoll <lars.knoll@qt.io>